Update main js and test coverage for it, add express server, migrate to Next.js

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,5 +9,8 @@
     "sourceType": "module"
   },
   "parser": "@babel/eslint-parser",
-  "extends": ["eslint:recommended", "plugin:prettier/recommended"]
+  "extends": ["eslint:recommended", "plugin:prettier/recommended"],
+  "rules": {
+    "no-undef": "off"
+  }
 }
