--- a/package.json
+++ b/package.json
@@ -4,18 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node main.mjs",
+    "dev": "next",
+    "dev:server": "node server.mjs",
+    "build": "next build",
+    "serve": "cross-env NODE_ENV=production node server.mjs",
     "test": "jest --config=jest.config.js --watch",
-    "lint": "prettier --write ."
+    "lint:fix": "prettier --write ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
+    "axios": "^0.27.2",
+    "cross-env": "^7.0.3",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "express": "^4.18.0",
     "jest": "^27.5.1",
-    "prettier": "^2.6.2"
+    "next": "^12.1.5",
+    "prettier": "^2.6.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   }
 }
