--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "schedule-app-ui",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
     "dev": "next",
-    "dev:server": "node server.mjs",
+    "dev:server": "node server.js",
     "build": "next build",
-    "serve": "yarn build && cross-env NODE_ENV=production node server.mjs",
+    "serve": "yarn build && cross-env NODE_ENV=production node server.js",
     "test": "jest --config=jest.config.js --watch",
     "lint:fix": "prettier --write ."
   },
