--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "next",
     "dev:server": "node server.js",
     "build": "next build",
-    "serve": "yarn build && cross-env NODE_ENV=production node server.js",
     "start": "cross-env NODE_ENV=production node server.js",
+    "serve": "yarn build && yarn start",
     "test": "jest --config=jest.config.js --watch",
     "lint:fix": "prettier --write ."
   },
