Repair useState when authorization is available

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,7 @@
     "paths": {
       "@context/*": ["context/*"],
       "@utils/*": ["utils/*"],
-      "@schedule/*": ["schedule/*"],
+      "@schedule/*": ["schedule/*"]
     }
   }
 }
