--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:server": "node server.js",
     "build": "next build",
     "start": "cross-env NODE_ENV=production node server.js",
-    "serve": "yarn build && yarn start",
+    "serve": "npm run build && npm run start",
     "test": "jest --config=jest.config.js --watch",
     "lint:fix": "prettier --write ."
   },
