--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "prettier": "^2.6.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
+  },
+  "dependencies": {
+    "uuid": "^8.3.2"
   }
 }
