Add alias for components path

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,8 @@
     "paths": {
       "@context/*": ["context/*"],
       "@utils/*": ["utils/*"],
-      "@schedule/*": ["schedule/*"]
+      "@schedule/*": ["schedule/*"],
+      "@components/*": ["components/*"]
     }
   }
 }
