--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "next": "^12.1.5",
     "prettier": "^2.6.2",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "sass": "^1.51.0"
   },
   "dependencies": {
     "uuid": "^8.3.2"
