--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "axios": "^0.27.2",
+    "cookies-next": "^2.0.4",
     "cross-env": "^7.0.3",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
